--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Download vivo animation movie. Vivo, Sony Pictures Animation's first-ever musical adventure featuring all-new original songs from Lin-Manuel Miranda, 
     will take audiences on an epic adventure to gorgeous and vibrant locations never before seen in animation.">
     <title>vivo</title>
-    <link rel="stylesheet" href="light.css">
+    <link rel="stylesheet" href="dark.css">
     <link rel="shortcut icon" href="./img/fav.png" type="image/x-icon">
     <link
       rel="stylesheet"
