--- a/index.html
+++ b/index.html
@@ -1,71 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Download vivo animation movie. Vivo, Sony Pictures Animation's first-ever musical adventure featuring all-new original songs from Lin-Manuel Miranda, 
-    will take audiences on an epic adventure to gorgeous and vibrant locations never before seen in animation.">
-    <title>vivo</title>
-    <link rel="stylesheet" href="dark.css">
-    <link rel="shortcut icon" href="./img/fav.png" type="image/x-icon">
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
-    />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Download vivo animation movie. Vivo, Sony Pictures Animation's first-ever musical adventure featuring all-new original songs from Lin-Manuel Miranda, 
+  will take audiences on an epic adventure to gorgeous and vibrant locations never before seen in animation.">
+  <title>Vivo</title>
+  <link rel="stylesheet" href="dark.css">
+  <link rel="shortcut icon" href="./img/fav.png" type="image/x-icon">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
+  />
 </head>
+
 <body>
-    <div id="header">
-        <h1 id="logo"><img id="imglogo" src="./img/logo.png" alt=""> <i id="themeicon" class="fas fa-moon"></i></h1>
-    </div>
+  <div id="header">
+    <h1 id="logo"><img id="imglogo" src="./img/logo.png" alt=""> <i id="themeicon" class="fas fa-sun"></i></h1>
+  </div>
 
-    <div id="thumb">
-    </div>
+  <div id="thumb">
+  </div>
 
-    <div id="about">
-        Vivo, Sony Pictures Animation's first-ever musical adventure featuring all-new original songs from Lin-Manuel Miranda, 
-        will take audiences on an epic adventure to gorgeous and vibrant locations never before seen in animation.
-        Vivo follows a one-of-kind kinkajou (aka a rainforest "honey bear") who spends his days playing music to the crowds 
-        in a lively square with his beloved owner Andrés. Though they don't speak the same language, Vivo and Andrés are 
-        the perfect duo through their common love of music. But when tragedy strikes shortly after Andrés receives a letter 
-        from the famous Marta Sandoval, inviting her old partner to her farewell concert with the hope of reconnecting, 
-        it's up to Vivo to deliver a message that Andrés never could: A love letter to Marta, written long ago, in the 
-        form of a song. Yet in order to get to Marta, who lives a world away, Vivo needs help from Gabi, an energetic 
-        tween who bounces to the beat of her own offbeat drum, to fulfill his owner's wishes.
-    </div>
+  <div id="about">
+    Vivo, Sony Pictures Animation's first-ever musical adventure featuring all-new original songs from Lin-Manuel Miranda, 
+    will take audiences on an epic adventure to gorgeous and vibrant locations never before seen in animation.
+    Vivo follows a one-of-kind kinkajou (aka a rainforest "honey bear") who spends his days playing music to the crowds 
+    in a lively square with his beloved owner Andrés. Though they don't speak the same language, Vivo and Andrés are 
+    the perfect duo through their common love of music. But when tragedy strikes shortly after Andrés receives a letter 
+    from the famous Marta Sandoval, inviting her old partner to her farewell concert with the hope of reconnecting, 
+    it's up to Vivo to deliver a message that Andrés never could: A love letter to Marta, written long ago, in the 
+    form of a song. Yet in order to get to Marta, who lives a world away, Vivo needs help from Gabi, an energetic 
+    tween who bounces to the beat of her own offbeat drum, to fulfill his owner's wishes.
+  </div>
 
-    <div id="divdlbtn">
-        <a href="https://www.mediafire.com/file/694rv948po5cfoj/Vivo_%25282021%2529_uploaded_by_Francisco.mp4/file"><button class="ripple">Download <i class="fas fa-download"></i></button></a>
-    </div>
+  <div id="download">
+    <button class="download"> Download <i class="fas fa-download"></i></button></a>
+  </div>
 
-    <!-- 
-    <div id="music player">
-    </div> 
-    -->
+  <!-- 
+  <div id="music player">
+  </div> 
+  -->
 
-    <div class="carousel">
-        <div class="image-container" id="imgs">
-          <img 
-            src="./img/slide1.jpg"
-            alt="first-image"
-          />
-          <img
-            src="./img/slide2.jpg"
-            alt="second-image"
-          />
-          <img
-            src="./img/slide3.jpg"
-            alt="third-image"
-          />
-          <img
-            src="./img/slide4.jpg"
-            alt="fourth-image"
-          />
-        </div>
-    </div>
+  <div class="carousel">
+      <div class="image-container" id="imgs">
+        <img 
+          src="./img/slide1.jpg"
+          alt="first-image"
+        />
+        <img
+          src="./img/slide2.jpg"
+          alt="second-image"
+        />
+        <img
+          src="./img/slide3.jpg"
+          alt="third-image"
+        />
+        <img
+          src="./img/slide4.jpg"
+          alt="fourth-image"
+        />
+      </div>
+  </div>
 
-    <h1 id="footer">&copy Vivo. Made with ♥ by <a href="http://franciscobaze.hashnode.dev">Francisco</a></h1>
+  <h1 id="footer">&copy Vivo. Made with ♥ by <a class="footer" href="http://franciscobaze.hashnode.dev">Francisco</a></h1>
 
-    <script src="./app.js"></script>
+  <script src="./app.js"></script>
 </body>
 </html>
